unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <formula>Dictaminacion__r.Oportunidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proceso de Venta Cesión</label>
    <type>Text</type>
</CustomField>