unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Regimen_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Regimen_Fiscal__c</fullName>
    <label>Régimen Fiscal Cesión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General de Ley Personas Morales</fullName>
            </value>
            <value>
                <fullName>Personas Morales con Fines no Lucrativos</fullName>
            </value>
            <value>
                <fullName>Sueldos y Salarios e Ingresos Asimilados a Salarios</fullName>
            </value>
            <value>
                <fullName>Arrendamiento</fullName>
            </value>
            <value>
                <fullName>Régimen de Enajenación o Adquisición de Bienes</fullName>
            </value>
            <value>
                <fullName>Demás ingresos</fullName>
            </value>
            <value>
                <fullName>Residentes en el Extranjero sin Establecimiento Permanente en México</fullName>
            </value>
            <value>
                <fullName>Ingresos por Dividendos (socios y accionistas)</fullName>
            </value>
            <value>
                <fullName>Personas Físicas con Actividades Empresariales y Profesionales</fullName>
            </value>
            <value>
                <fullName>Ingresos por intereses</fullName>
            </value>
            <value>
                <fullName>Régimen de los ingresos por obtención de premios</fullName>
            </value>
            <value>
                <fullName>Sin obligaciones fiscales</fullName>
            </value>
            <value>
                <fullName>Sociedades Cooperativas de Producción que optan por diferir sus ingresos</fullName>
            </value>
            <value>
                <fullName>Incorporación Fiscal</fullName>
            </value>
            <value>
                <fullName>Actividades Agrícolas, Ganaderas, Silvícolas y Pesqueras</fullName>
            </value>
            <value>
                <fullName>Opcional para Grupos de Sociedades</fullName>
            </value>
            <value>
                <fullName>Coordinados</fullName>
            </value>
            <value>
                <fullName>Régimen de las Actividades Empresariales con ingresos a través de Plataformas Tecnológicas</fullName>
            </value>
            <value>
                <fullName>Régimen Simplificado de Confianza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>