unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Registro_completo__c.field-meta.xml
<CustomField>
    <fullName>Registro_completo__c</fullName>
    <formula>IF( Check_Direccion_Principal__c &amp;&amp;  Check_Direccion_Laboral__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registro completo Cesión</label>
    <type>Checkbox</type>
</CustomField>