unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <label>RFC Cesión</label>
    <length>13</length>
    <type>Text</type>
</CustomField>