unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/RFC_Empresa__c.field-meta.xml
<CustomField>
    <fullName>RFC_Empresa__c</fullName>
    <label>RFC Empresa Cesión</label>
    <length>13</length>
    <type>Text</type>
</CustomField>