unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/RFC_Empresa_Laboral_Rep_Legal__c.field-meta.xml
<CustomField>
    <fullName>RFC_Empresa_Laboral_Rep_Legal__c</fullName>
    <label>RFC Empresa Laboral Rep Legal Cesión</label>
    <length>13</length>
    <type>Text</type>
</CustomField>