unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Sub_Tipo_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Sub_Tipo_Fiscal__c</fullName>
    <label>Sub Tipo Fiscal Cesión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Persona Física</fullName>
            </value>
            <value>
                <fullName>Persona Moral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>