unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Tel_Celular__c.field-meta.xml
<CustomField>
    <fullName>Tel_Celular__c</fullName>
    <label>Tel. Celular Cesión</label>
    <type>Phone</type>
</CustomField>