unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Tel_Domicilio__c.field-meta.xml
<CustomField>
    <fullName>Tel_Domicilio__c</fullName>
    <label>Tel. Domicilio Cesión</label>
    <type>Phone</type>
</CustomField>