unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Telefono_Celular_Cesion_Rep_Legal__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Celular_Cesion_Rep_Legal__c</fullName>
    <label>Teléfono Celular Cesión Rep Legal</label>
    <type>Phone</type>
</CustomField>