unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/recordTypes/Persona_Fisica.recordType-meta.xml
<RecordType>
    <fullName>Persona_Fisica</fullName>
    <active>true</active>
    <label>Persona Física</label>
</RecordType>