unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/recordTypes/Persona_Moral.recordType-meta.xml
<RecordType>
    <fullName>Persona_Moral</fullName>
    <active>true</active>
    <label>Persona Moral</label>
</RecordType>