unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_apellido_paterno.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_apellido_paterno</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo apellido paterno.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(Apellido_Paterno__c),
ISBLANK(Apellido_Paterno__c)
)
)</errorConditionFormula>
    <errorDisplayField>Apellido_Paterno__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo apellido paterno debe llenarse.</errorMessage>
</ValidationRule>