unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_calle_domicilio.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_calle_domicilio</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo calle domicilio.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(Calle__c),
ISBLANK(Calle__c)
)
)</errorConditionFormula>
    <errorDisplayField>Calle__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo calle domicilio debe llenarse.</errorMessage>
</ValidationRule>