unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_clave_de_pais.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_clave_de_pais</fullName>
    <active>false</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo clave del país.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(TEXT(Clave_del_Pais__c)),
ISBLANK(TEXT(Clave_del_Pais__c))
)
)</errorConditionFormula>
    <errorDisplayField>Clave_del_Pais__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo clave del país debe llenarse.</errorMessage>
</ValidationRule>