unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_codigo_postal.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_codigo_postal</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo código postal.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(Codigo_Postal__c),
ISBLANK(Codigo_Postal__c)
)
)</errorConditionFormula>
    <errorDisplayField>Codigo_Postal__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo código postal debe llenarse.</errorMessage>
</ValidationRule>