unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_correo_electronico.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_correo_electronico</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo correo electrónico.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(Correo_electronico__c),
ISBLANK(Correo_electronico__c)
)
)</errorConditionFormula>
    <errorDisplayField>Correo_electronico__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo correo electrónico debe llenarse.</errorMessage>
</ValidationRule>