unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_curp.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_curp</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo CURP.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(CURP__c),
ISBLANK(CURP__c)
)
)</errorConditionFormula>
    <errorDisplayField>CURP__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo CURP debe llenarse.</errorMessage>
</ValidationRule>