unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_estado.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_estado</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo estado.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(Estado__c),
ISBLANK(Estado__c)
)
)</errorConditionFormula>
    <errorDisplayField>Estado__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo estado debe llenarse.</errorMessage>
</ValidationRule>