unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_no_escritura.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_no_escritura</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI y sub tipo fiscal = persona moral debe llenarse el campo.</description>
    <errorConditionFormula>AND
(
(TEXT(Sub_Tipo_Fiscal__c) == &quot;Persona Moral&quot;),
(Escritura_a_favor_de_un_Tercero__c) == &quot;SI&quot;,
OR(
ISNULL(No_Escritura__c),
ISBLANK(No_Escritura__c)
)
)</errorConditionFormula>
    <errorDisplayField>No_Escritura__c</errorDisplayField>
    <errorMessage>Si escritura a favor de un tercero es igual a SI y sub tipo fiscal = persona moral debe llenarse el campo.</errorMessage>
</ValidationRule>