unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_nombre_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_nombre_obligatorio</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo nombre.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(Nombre__c),
ISBLANK(Nombre__c)
)
)</errorConditionFormula>
    <errorDisplayField>Nombre__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo sub tipo fiscal debe llenarse.</errorMessage>
</ValidationRule>