unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_numero_interior.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_numero_interior</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo número interior.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(Num_Interior__c),
ISBLANK(Num_Interior__c)
)
)</errorConditionFormula>
    <errorDisplayField>Num_Interior__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo número interior debe llenarse.</errorMessage>
</ValidationRule>