unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_pais_de_nacimiento.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_pais_de_nacimiento</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo país de nacimiento.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(Pais_de_Nacimiento__c),
ISBLANK(Pais_de_Nacimiento__c)
)
)</errorConditionFormula>
    <errorDisplayField>Pais_de_Nacimiento__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo país de nacimiento debe llenarse.</errorMessage>
</ValidationRule>