unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_pais_nacionalidad.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_pais_nacionalidad</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo país de nacionalidad.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(Pais_de_Nacionalidad__c	),
ISBLANK(Pais_de_Nacionalidad__c	)
)
)</errorConditionFormula>
    <errorDisplayField>Pais_de_Nacionalidad__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo país de nacionalidad debe llenarse.</errorMessage>
</ValidationRule>