unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Escritura_tercero_tipo_identificacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Escritura_tercero_tipo_identificacion</fullName>
    <active>true</active>
    <description>Si escritura a favor de un tercero es igual a SI debe llenarse el campo tipo identificación.</description>
    <errorConditionFormula>AND
(
Escritura_a_favor_de_un_Tercero__c == &quot;SI&quot;,
OR(
ISNULL(TEXT(Tipo_Identificacion__c)),
ISBLANK(TEXT(Tipo_Identificacion__c))
)
)</errorConditionFormula>
    <errorDisplayField>Tipo_Identificacion__c</errorDisplayField>
    <errorMessage>El campo escritura a favor de un tercero = SI por lo que el campo tipo identificación debe llenarse.</errorMessage>
</ValidationRule>