unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Solo_Aceptar_Letras.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo_Aceptar_Letras</fullName>
    <active>true</active>
    <description>Por favor ingresar unicamente letras para Nombres y Apellidos</description>
    <errorConditionFormula>NOT(REGEX( Nombre__c ,&quot;^[a-z A-Z Ñ n]*$&quot;)) ||

NOT(REGEX( Apellido_Materno__c ,&quot;^[a-z A-Z Ñ n]*$&quot;)) ||

NOT(REGEX( Apellido_Paterno__c ,&quot;^[a-z A-Z Ñ n]*$&quot;))</errorConditionFormula>
    <errorMessage>Por favor ingresar unicamente letras en los campos de Nombre, Apellido Paterno y Apellido Materno</errorMessage>
</ValidationRule>