unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/validationRules/Solo_Letras_en_Accionistas.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo_Letras_en_Accionistas</fullName>
    <active>true</active>
    <description>Por favor ingresar unicamente letras para Nombres y Apellidos</description>
    <errorConditionFormula>NOT(REGEX( Accionista_1__c ,&quot;^[a-z A-Z Ñ n]*$&quot;)) ||

NOT(REGEX( Accionistas_2__c ,&quot;^[a-z A-Z Ñ n]*$&quot;)) ||

NOT(REGEX( Accionistas_3__c ,&quot;^[a-z A-Z Ñ n]*$&quot;)) ||

NOT(REGEX( Miembros_del_Consejo_1__c ,&quot;^[a-z A-Z Ñ n]*$&quot;)) ||

NOT(REGEX( Miembros_del_Consejo_2__c ,&quot;^[a-z A-Z Ñ n]*$&quot;)) ||

NOT(REGEX( Miembros_del_Consejo_3__c ,&quot;^[a-z A-Z Ñ n]*$&quot;)) ||

NOT(REGEX( Director_General__c ,&quot;^[a-z A-Z Ñ n]*$&quot;))</errorConditionFormula>
    <errorMessage>Por favor ingresar unicamente letras en los campos de Director General, Accionista y Miembros del Consejo.</errorMessage>
</ValidationRule>